cert-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.23
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: certificate
              mountPath: /etc/nginx/certificates
      volumes:
        - name: certificate
          secret:
            secretName: nginx-certificate
