cert-manager/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nginx.example`)
      services:
        - kind: Service
          name: nginx
          port: 443
          scheme: https
          serversTransport: nginx
